task/MP-3184 remove_delete_shapes_graph_endpoint